2003-05-20  Marcus Meissner <marcus@jet.franken.de>
	
	* blink2.[ch]: New SiPix Blink2 driver. Downloads
	  unprocessed JPEG for now (needs a bit work).

	* Makefile.am: reorganized file layout.

2002-12-04  Marcus Meissner <marcus@jet.franken.de>

        * Intermediate checkin of my current work.

          - Can read bitstream to some degree and extract the DCT tables.
            Still apparently does not find the endmarker correctly.

2002-09-21  Marcus Meissner <marcus@jet.franken.de>
        
        * Imported SiPix StyleCam Blink driver from 
          Vincent Sanders <vince@kyllikki.org>

        * Cleaned it up and made it work, still dumps compressed images.

2002-04-12  Marcus Meissner <marcus@jet.franken.de>
	
	* *: First version of SiPix Web2 driver:

	  The Camera is a 640x480 JPEG camera. The driver 
	  currently supports:
	  - Picture, Thumbnail, EXIF download.
	  - Delete Single Picture